--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
         "build": "vite build --config vite/config.prod.mjs"
     },
     "dependencies": {
+        "json-cycle": "^1.5.0",
         "phaser": "^3.80.1",
         "react": "^18.2.0",
         "react-dom": "^18.2.0"
