checkout to main

--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "dependencies": {
         "@dnd-kit/core": "^6.1.0",
         "phaser": "^3.80.1",
+        "phaser3-rex-plugins": "^1.80.1",
         "react": "^18.2.0",
         "react-dom": "^18.2.0"
     },
