--- a/package.json
+++ b/package.json
@@ -28,7 +28,8 @@
         "@dnd-kit/core": "^6.1.0",
         "phaser": "^3.80.1",
         "react": "^18.2.0",
-        "react-dom": "^18.2.0"
+        "react-dom": "^18.2.0",
+        "react-router-dom": "^6.22.3"
     },
     "devDependencies": {
         "@types/react": "^18.2.58",
