--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     },
     "dependencies": {
         "@dnd-kit/core": "^6.1.0",
+        "axios": "^1.6.8",
         "phaser": "^3.80.1",
         "phaser3-rex-plugins": "^1.80.1",
         "react": "^18.2.0",
